--- a/catalog.html
+++ b/catalog.html
@@ -391,145 +391,161 @@
 				<div class="products-wrapper">
 					<div class="products">
 
-						<div class="product discount">
-							<div class="product-image">
-								<img src="./assets/hookah-1.png" alt="">
-							</div>
-							<div class="product-info">
-								<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-								<div class="product-price">
-									<h5 class="product-price-new">5 990 ₽</h5>
-									<strike class="product-price-old">8 990 ₽</strike>
+						<div class="product swiper-slide discount">
+							<a href="" class="product-link">
+								<div class="product-image">
+									<img src="./assets/hookah-1.png" alt="">
 								</div>
-								<a href="" class="button">
-									<svg class="icon">
-									  <use xlink:href="#button-cart"></use>
-									</svg>
-									В корзину
-								</a>
-							</div>
+								<div class="product-info">
+									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+									<div class="product-price">
+										<h5 class="product-price-new">5 990 ₽</h5>
+										<strike class="product-price-old">8 990 ₽</strike>
+									</div>
+								</div>
+							</a>
+							<a href="" class="button">
+								<svg class="icon">
+								  <use xlink:href="#button-cart"></use>
+								</svg>
+								В корзину
+							</a>
 						</div>
-						<div class="product bamboo">
-							<div class="product-image">
-								<img src="./assets/hookah-2.png" alt="">
-							</div>
-							<div class="product-info">
-								<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-								<div class="product-price">
-									<h5 class="product-price-current">5 990 ₽</h5>
+						<div class="product swiper-slide bamboo">
+							<a href="" class="product-link">
+								<div class="product-image">
+									<img src="./assets/hookah-1.png" alt="">
 								</div>
-								<a href="" class="button">
-									<svg class="icon">
-									  <use xlink:href="#button-cart"></use>
-									</svg>
-									В корзину
-								</a>
-							</div>
+								<div class="product-info">
+									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+									<div class="product-price">
+										<h5 class="product-price-current">5 990 ₽</h5>
+									</div>
+								</div>
+							</a>
+							<a href="" class="button">
+								<svg class="icon">
+								  <use xlink:href="#button-cart"></use>
+								</svg>
+								В корзину
+							</a>
 						</div>
-						<div class="product discount">
-							<div class="product-image">
-								<img src="./assets/hookah-1.png" alt="">
-							</div>
-							<div class="product-info">
-								<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-								<div class="product-price">
-									<h5 class="product-price-new">5 990 ₽</h5>
-									<strike class="product-price-old">8 990 ₽</strike>
+						<div class="product swiper-slide discount">
+							<a href="" class="product-link">
+								<div class="product-image">
+									<img src="./assets/hookah-1.png" alt="">
 								</div>
-								<a href="" class="button">
-									<svg class="icon">
-									  <use xlink:href="#button-cart"></use>
-									</svg>
-									В корзину
-								</a>
-							</div>
+								<div class="product-info">
+									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+									<div class="product-price">
+										<h5 class="product-price-new">5 990 ₽</h5>
+										<strike class="product-price-old">8 990 ₽</strike>
+									</div>
+								</div>
+							</a>
+							<a href="" class="button">
+								<svg class="icon">
+								  <use xlink:href="#button-cart"></use>
+								</svg>
+								В корзину
+							</a>
 						</div>
-						<div class="product bamboo">
-							<div class="product-image">
-								<img src="./assets/hookah-2.png" alt="">
-							</div>
-							<div class="product-info">
-								<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-								<div class="product-price">
-									<h5 class="product-price-current">5 990 ₽</h5>
+						<div class="product swiper-slide bamboo">
+							<a href="" class="product-link">
+								<div class="product-image">
+									<img src="./assets/hookah-1.png" alt="">
 								</div>
-								<a href="" class="button">
-									<svg class="icon">
-									  <use xlink:href="#button-cart"></use>
-									</svg>
-									В корзину
-								</a>
-							</div>
+								<div class="product-info">
+									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+									<div class="product-price">
+										<h5 class="product-price-current">5 990 ₽</h5>
+									</div>
+								</div>
+							</a>
+							<a href="" class="button">
+								<svg class="icon">
+								  <use xlink:href="#button-cart"></use>
+								</svg>
+								В корзину
+							</a>
 						</div>
-						<div class="product">
-							<div class="product-image">
-								<img src="./assets/hookah-1.png" alt="">
-							</div>
-							<div class="product-info">
-								<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-								<div class="product-price">
-									<h5 class="product-price-current">5 990 ₽</h5>
+						<div class="product swiper-slide">
+							<a href="" class="product-link">
+								<div class="product-image">
+									<img src="./assets/hookah-1.png" alt="">
 								</div>
-								<a href="" class="button">
-									<svg class="icon">
-									  <use xlink:href="#button-cart"></use>
-									</svg>
-									В корзину
-								</a>
-							</div>
+								<div class="product-info">
+									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+									<div class="product-price">
+										<h5 class="product-price-current">5 990 ₽</h5>
+									</div>
+								</div>
+							</a>
+							<a href="" class="button">
+								<svg class="icon">
+								  <use xlink:href="#button-cart"></use>
+								</svg>
+								В корзину
+							</a>
 						</div>
-						<div class="product discount">
-							<div class="product-image">
-								<img src="./assets/hookah-1.png" alt="">
-							</div>
-							<div class="product-info">
-								<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-								<div class="product-price">
-									<h5 class="product-price-new">5 990 ₽</h5>
-									<strike class="product-price-old">8 990 ₽</strike>
+						<div class="product swiper-slide discount">
+							<a href="" class="product-link">
+								<div class="product-image">
+									<img src="./assets/hookah-1.png" alt="">
 								</div>
-								<a href="" class="button">
-									<svg class="icon">
-									  <use xlink:href="#button-cart"></use>
-									</svg>
-									В корзину
-								</a>
-							</div>
+								<div class="product-info">
+									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+									<div class="product-price">
+										<h5 class="product-price-new">5 990 ₽</h5>
+										<strike class="product-price-old">8 990 ₽</strike>
+									</div>
+								</div>
+							</a>
+							<a href="" class="button">
+								<svg class="icon">
+								  <use xlink:href="#button-cart"></use>
+								</svg>
+								В корзину
+							</a>
 						</div>
-						<div class="product bamboo">
-							<div class="product-image">
-								<img src="./assets/hookah-2.png" alt="">
-							</div>
-							<div class="product-info">
-								<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-								<div class="product-price">
-									<h5 class="product-price-current">5 990 ₽</h5>
+						<div class="product swiper-slide bamboo">
+							<a href="" class="product-link">
+								<div class="product-image">
+									<img src="./assets/hookah-1.png" alt="">
 								</div>
-								<a href="" class="button">
-									<svg class="icon">
-									  <use xlink:href="#button-cart"></use>
-									</svg>
-									В корзину
-								</a>
-							</div>
+								<div class="product-info">
+									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+									<div class="product-price">
+										<h5 class="product-price-current">5 990 ₽</h5>
+									</div>
+								</div>
+							</a>
+							<a href="" class="button">
+								<svg class="icon">
+								  <use xlink:href="#button-cart"></use>
+								</svg>
+								В корзину
+							</a>
 						</div>
-						<div class="product discount">
-							<div class="product-image">
-								<img src="./assets/hookah-1.png" alt="">
-							</div>
-							<div class="product-info">
-								<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-								<div class="product-price">
-									<h5 class="product-price-new">5 990 ₽</h5>
-									<strike class="product-price-old">8 990 ₽</strike>
+						<div class="product swiper-slide discount">
+							<a href="" class="product-link">
+								<div class="product-image">
+									<img src="./assets/hookah-1.png" alt="">
 								</div>
-								<a href="" class="button">
-									<svg class="icon">
-									  <use xlink:href="#button-cart"></use>
-									</svg>
-									В корзину
-								</a>
-							</div>
+								<div class="product-info">
+									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+									<div class="product-price">
+										<h5 class="product-price-new">5 990 ₽</h5>
+										<strike class="product-price-old">8 990 ₽</strike>
+									</div>
+								</div>
+							</a>
+							<a href="" class="button">
+								<svg class="icon">
+								  <use xlink:href="#button-cart"></use>
+								</svg>
+								В корзину
+							</a>
 						</div>
 
 					</div>
