--- a/index.html
+++ b/index.html
@@ -355,93 +355,102 @@
 						<div class="swiper-wrapper">
 
 							<div class="product swiper-slide discount">
-								<div class="product-image">
-									<img src="./assets/hookah-1.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-new">5 990 ₽</h5>
-										<strike class="product-price-old">8 990 ₽</strike>
+								<a href="" class="product-link">
+									<div class="product-image">
+										<img src="./assets/hookah-1.png" alt="">
 									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
+									<div class="product-info">
+										<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+										<div class="product-price">
+											<h5 class="product-price-new">5 990 ₽</h5>
+											<strike class="product-price-old">8 990 ₽</strike>
+										</div>
+									</div>
+								</a>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
 							</div>
 							<div class="product swiper-slide bamboo">
-								<div class="product-image">
-									<img src="./assets/hookah-2.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-current">5 990 ₽</h5>
+								<a href="" class="product-link">
+									<div class="product-image">
+										<img src="./assets/hookah-1.png" alt="">
 									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
+									<div class="product-info">
+										<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+										<div class="product-price">
+											<h5 class="product-price-current">5 990 ₽</h5>
+										</div>
+									</div>
+								</a>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
 							</div>
 							<div class="product swiper-slide discount">
-								<div class="product-image">
-									<img src="./assets/hookah-1.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-new">5 990 ₽</h5>
-										<strike class="product-price-old">8 990 ₽</strike>
+								<a href="" class="product-link">
+									<div class="product-image">
+										<img src="./assets/hookah-1.png" alt="">
 									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
+									<div class="product-info">
+										<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+										<div class="product-price">
+											<h5 class="product-price-new">5 990 ₽</h5>
+											<strike class="product-price-old">8 990 ₽</strike>
+										</div>
+									</div>
+								</a>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
 							</div>
 							<div class="product swiper-slide bamboo">
-								<div class="product-image">
-									<img src="./assets/hookah-2.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-current">5 990 ₽</h5>
+								<a href="" class="product-link">
+									<div class="product-image">
+										<img src="./assets/hookah-1.png" alt="">
 									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
+									<div class="product-info">
+										<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+										<div class="product-price">
+											<h5 class="product-price-current">5 990 ₽</h5>
+										</div>
+									</div>
+								</a>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
 							</div>
 							<div class="product swiper-slide">
-								<div class="product-image">
-									<img src="./assets/hookah-1.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-current">5 990 ₽</h5>
+								<a href="" class="product-link">
+									<div class="product-image">
+										<img src="./assets/hookah-1.png" alt="">
 									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
+									<div class="product-info">
+										<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+										<div class="product-price">
+											<h5 class="product-price-current">5 990 ₽</h5>
+										</div>
+									</div>
+								</a>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
 							</div>
-
 
 						</div>
 						<div class="swiper-button-prev product-prev"></div>
@@ -458,91 +467,101 @@
 						<div class="swiper-wrapper">
 
 							<div class="product swiper-slide discount">
-								<div class="product-image">
-									<img src="./assets/new1.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-new">5 990 ₽</h5>
-										<strike class="product-price-old">8 990 ₽</strike>
+								<a href="" class="product-link">
+									<div class="product-image">
+										<img src="./assets/new1.png" alt="">
 									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
+									<div class="product-info">
+										<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+										<div class="product-price">
+											<h5 class="product-price-new">5 990 ₽</h5>
+											<strike class="product-price-old">8 990 ₽</strike>
+										</div>
+									</div>
+								</a>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
 							</div>
-							<div class="product swiper-slide">
-								<div class="product-image">
-									<img src="./assets/new2.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-current">5 990 ₽</h5>
+							<div class="product swiper-slide bamboo">
+								<a href="" class="product-link">
+									<div class="product-image">
+										<img src="./assets/new2.png" alt="">
 									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
+									<div class="product-info">
+										<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+										<div class="product-price">
+											<h5 class="product-price-current">5 990 ₽</h5>
+										</div>
+									</div>
+								</a>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
 							</div>
 							<div class="product swiper-slide discount">
-								<div class="product-image">
-									<img src="./assets/new3.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-new">5 990 ₽</h5>
-										<strike class="product-price-old">8 990 ₽</strike>
+								<a href="" class="product-link">
+									<div class="product-image">
+										<img src="./assets/new3.png" alt="">
 									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
+									<div class="product-info">
+										<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+										<div class="product-price">
+											<h5 class="product-price-new">5 990 ₽</h5>
+											<strike class="product-price-old">8 990 ₽</strike>
+										</div>
+									</div>
+								</a>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
+							</div>
+							<div class="product swiper-slide bamboo">
+								<a href="" class="product-link">
+									<div class="product-image">
+										<img src="./assets/new4.png" alt="">
+									</div>
+									<div class="product-info">
+										<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+										<div class="product-price">
+											<h5 class="product-price-current">5 990 ₽</h5>
+										</div>
+									</div>
+								</a>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
 							</div>
 							<div class="product swiper-slide">
-								<div class="product-image">
-									<img src="./assets/new4.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-current">5 990 ₽</h5>
+								<a href="" class="product-link">
+									<div class="product-image">
+										<img src="./assets/new5.png" alt="">
 									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
-							</div>
-							<div class="product swiper-slide">
-								<div class="product-image">
-									<img src="./assets/new5.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-current">5 990 ₽</h5>
+									<div class="product-info">
+										<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+										<div class="product-price">
+											<h5 class="product-price-current">5 990 ₽</h5>
+										</div>
 									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
+								</a>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
 							</div>
 							
 						</div>
