--- a/catalog.html
+++ b/catalog.html
@@ -24,6 +24,9 @@
 		<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" id="plus">
 	    <path id="+" fill-rule="evenodd" clip-rule="evenodd" d="M9.14857 19.991V11.6097H0.881104V9.3722H9.14857V0.990967H11.6516V9.3722H19.919V11.6097H11.6516V19.991H9.14857Z" fill="currentColor"></path>
 	  </symbol>
+	  <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9 17" id="arrow">
+			<path d="M1 1L9 8.506L1 16" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+		</symbol>
 	  <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11 7" id="arrow-down">
 	    <path d="M10.375 1L5.68375 6L1 1" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
 	  </symbol>
