--- a/cart.html
+++ b/cart.html
@@ -290,243 +290,22 @@
 		</header>
 
 		<main class="home-main">
-			<div class="article-wrapper">
-				<div class="container article">
+			<div class="cart-wrapper">
+				<div class="container cart">
 					<div class="breadcrumbs">
 						<ul class="breadcrumbs-list">
 							<li class="breadcrumbs-item">
 								<a href="">Главная</a>
 							</li>
 							<li class="breadcrumbs-item">
-								<a href="">Колбы</a>
-							</li>
-							<li class="breadcrumbs-item">
-								<a href="">Base</a>
-							</li>
-							<li class="breadcrumbs-item">
-								<p>Колба двухцветная для кальяна Base</p>
+								<p>Оптовые закупки</p>
 							</li>
 						</ul>
-					</div>
-					<div class="article-block">
-						<div class="article-top">
-							<div class="article-controls">
-								<div class="big-article">
-									<div class="swiper-wrapper">
-										<div class="slide swiper-slide">
-											<img src="./assets/article.png" alt="">
-										</div>
-										<div class="slide swiper-slide">
-											<img src="./assets/new2.png" alt="">
-										</div>
-										<div class="slide swiper-slide">
-											<img src="./assets/article.png" alt="">
-										</div>
-										<div class="slide swiper-slide">
-											<img src="./assets/new2.png" alt="">
-										</div>
-									</div>
-								</div>
-								<div class="small-article">
-									<div class="swiper-wrapper">
-										<div class="slide swiper-slide">
-											<img src="./assets/article.png" alt="">
-										</div>
-										<div class="slide swiper-slide">
-											<img src="./assets/new2.png" alt="">
-										</div>
-										<div class="slide swiper-slide">
-											<img src="./assets/article.png" alt="">
-										</div>
-										<div class="slide swiper-slide">
-											<img src="./assets/new2.png" alt="">
-										</div>
-									</div>
-									<div class="swiper-button-prev article-prev"></div>
-									<div class="swiper-button-next article-next"></div>
-								</div>
-							</div>
-							<div class="article-info">
-								<h2 class="article-name">
-									Колба двухцветная <br/> для кальяна Base
-								</h2>
-								<p class="article-price-for-one">Цена за единицу: <span>875₽</span></p>
-								<div class="pricing-table">
-									<div class="pricing-table-row">
-										<div><p>Сумма покупки</p></div>
-										<div><p>Скидка</p></div>
-										<div><p>1 шт. со скидкой</p></div>
-									</div>
-									<div class="pricing-table-row">
-										<div><p>от 30 000₽</p></div>
-										<div><p>5%</p></div>
-										<div><strike>875₽</strike><p>831,25₽</p></div>
-									</div>
-									<div class="pricing-table-row">
-										<div><p>от 60 000₽</p></div>
-										<div><p>10%</p></div>
-										<div><strike>875₽</strike><p>787,5₽</p></div>
-									</div>
-									<div class="pricing-table-row">
-										<div><p>от 100 000₽</p></div>
-										<div><p>15%</p></div>
-										<div><strike>875₽</strike><p>743,75₽</p></div>
-									</div>
-								</div>
-								<p class="article-warning">Минимальное кол-во для заказа этого товара: 8. <br/> Заказ отгружается кратно упаковке (кратность упаковки: 8)</p>
-								<p class="article-price">7000 ₽</p>
-								<div class="article-settings">
-									<div class="count-cart">
-	                  <button class="minus-cart"></button>
-	                  <input class="count" type="text" value="1">
-	                  <button class="plus-cart"></button>
-	                </div>
-	                <a href="" class="button button-cart">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
-							</div>
-						</div>
-						<div class="article-more">
-							<h2 class="article-more-title">Описание и характеристики</h2>
-							<p class="article-description">
-								Колба выполнена из пищевого, цветного, хрустального стекла.
-							</p>
-							<div class="article-more-block">
-								<p><span>Производство:</span> Китай.</p>
-								<p><span>Цвета:</span> бело-жёлтый, бело-оранжевый, оранжево-голубой</p>
-								<p><span>Толщина стекла:</span> 4-5 мм;</p>
-								<p><span>Внутренний диаметр горлышка:</span> 45 мм;</p>
-								<p><span>Высота колбы:</span> 250 мм;</p>
-								<p><span>Вес:</span> ± 1,4 кг.</p>
-							</div>
-							<div class="article-more-block">
-								<p><span>Параметры оптовой коробки (8 колб):</span></p>
-							</div>
-							<div class="article-more-block">
-								<p><span>Вес с коробкой:</span> 14,5 кг;</p>
-								<p><span>Габариты:</span> 56х83х33 см;</p>
-								<p><span>Объем:</span> 0,147 м3;</p>
-							</div>
-						</div>
+						<h1 class="page-name">Оптовые закупки</h1>
 					</div>
 				</div>
 			</div>
 
-			<div class="block-slider">
-				<div class="container block-slider-wrapper">
-					<h2 class="block-slider-title">Сопутствующие товары</h2>
-					<div class="products-slider no-border">
-						<div class="swiper-wrapper">
-
-							<div class="product swiper-slide discount">
-								<a href="" class="product-link">
-									<div class="product-image">
-										<img src="./assets/new1.png" alt="">
-									</div>
-									<div class="product-info">
-										<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-										<div class="product-price">
-											<h5 class="product-price-new">5 990 ₽</h5>
-											<strike class="product-price-old">8 990 ₽</strike>
-										</div>
-									</div>
-								</a>
-								<a href="" class="button">
-									<svg class="icon">
-									  <use xlink:href="#button-cart"></use>
-									</svg>
-									В корзину
-								</a>
-							</div>
-							<div class="product swiper-slide bamboo">
-								<a href="" class="product-link">
-									<div class="product-image">
-										<img src="./assets/new2.png" alt="">
-									</div>
-									<div class="product-info">
-										<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-										<div class="product-price">
-											<h5 class="product-price-current">5 990 ₽</h5>
-										</div>
-									</div>
-								</a>
-								<a href="" class="button">
-									<svg class="icon">
-									  <use xlink:href="#button-cart"></use>
-									</svg>
-									В корзину
-								</a>
-							</div>
-							<div class="product swiper-slide discount">
-								<a href="" class="product-link">
-									<div class="product-image">
-										<img src="./assets/new3.png" alt="">
-									</div>
-									<div class="product-info">
-										<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-										<div class="product-price">
-											<h5 class="product-price-new">5 990 ₽</h5>
-											<strike class="product-price-old">8 990 ₽</strike>
-										</div>
-									</div>
-								</a>
-								<a href="" class="button">
-									<svg class="icon">
-									  <use xlink:href="#button-cart"></use>
-									</svg>
-									В корзину
-								</a>
-							</div>
-							<div class="product swiper-slide bamboo">
-								<a href="" class="product-link">
-									<div class="product-image">
-										<img src="./assets/new4.png" alt="">
-									</div>
-									<div class="product-info">
-										<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-										<div class="product-price">
-											<h5 class="product-price-current">5 990 ₽</h5>
-										</div>
-									</div>
-								</a>
-								<a href="" class="button">
-									<svg class="icon">
-									  <use xlink:href="#button-cart"></use>
-									</svg>
-									В корзину
-								</a>
-							</div>
-							<div class="product swiper-slide">
-								<a href="" class="product-link">
-									<div class="product-image">
-										<img src="./assets/new5.png" alt="">
-									</div>
-									<div class="product-info">
-										<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-										<div class="product-price">
-											<h5 class="product-price-current">5 990 ₽</h5>
-										</div>
-									</div>
-								</a>
-								<a href="" class="button">
-									<svg class="icon">
-									  <use xlink:href="#button-cart"></use>
-									</svg>
-									В корзину
-								</a>
-							</div>
-							
-						</div>
-						<div class="swiper-button-prev product-prev"></div>
-						<div class="product-pagination"></div>
-						<div class="swiper-button-next product-next"></div>
-					</div>
-				</div>
-			</div>
 		</main>
 
 		<footer class="footer">
