--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 	  <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11 7" id="arrow-down">
 	    <path id="Stroke 1" d="M10.375 1L5.68375 6L1 1" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
 	  </symbol>
+	  <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" id="remove">
+	    <path d="m1.292 1.292 13.467 13.467M14.708 1.292 1.241 14.759" stroke="currentColor" stroke-linecap="square"></path>
+	  </symbol>
 	</svg>
 		<header class="header">
 			<div class="header-top desktop">
@@ -137,8 +140,10 @@
 												<strike class="product-price-old">8 990 ₽</strike>
 											</span>
 										</a>
-                    <button class="remove_list-item">
-                    	<img src="./assets/remove.svg" alt="">
+                    <button class="remove_list-item" title="Удалить из корзины">
+                    	<svg class="icon">
+											  <use xlink:href="#remove"></use>
+											</svg>
                     </button>
                   </li>
                   <li class="cart_list-item">
@@ -151,8 +156,10 @@
 												<h5 class="product-price-current">5 990 ₽</h5>
 											</span>
 										</a>
-                    <button class="remove_list-item">
-                    	<img src="./assets/remove.svg" alt="">
+                    <button class="remove_list-item"title="Удалить из корзины">
+                    	<svg class="icon">
+											  <use xlink:href="#remove"></use>
+											</svg>
                     </button>
                   </li>
                   <li class="cart_list-item">
@@ -166,8 +173,10 @@
 												<strike class="product-price-old">8 990 ₽</strike>
 											</span>
 										</a>
-                    <button class="remove_list-item">
-                    	<img src="./assets/remove.svg" alt="">
+                    <button class="remove_list-item"title="Удалить из корзины">
+                    	<svg class="icon">
+											  <use xlink:href="#remove"></use>
+											</svg>
                     </button>
                   </li>
                   <li class="cart_list-item">
@@ -180,8 +189,10 @@
 												<h5 class="product-price-current">5 990 ₽</h5>
 											</span>
 										</a>
-                    <button class="remove_list-item">
-                    	<img src="./assets/remove.svg" alt="">
+                    <button class="remove_list-item" title="Удалить из корзины">
+                    	<svg class="icon">
+											  <use xlink:href="#remove"></use>
+											</svg>
                     </button>
                   </li>
                   </li>
@@ -193,6 +204,7 @@
                   </div>
                 	<a class="button go_to_cart" href="">Перейти в корзину</a>
                 </div>
+              </div>
 						</li>
 						<li>
 							<a href="">
