--- a/cart.html
+++ b/cart.html
@@ -27,6 +27,9 @@
 	  <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11 7" id="arrow-down">
 	    <path id="Stroke 1" d="M10.375 1L5.68375 6L1 1" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
 	  </symbol>
+	  <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" id="remove">
+	    <path d="m1.292 1.292 13.467 13.467M14.708 1.292 1.241 14.759" stroke="currentColor" stroke-linecap="square"></path>
+	  </symbol>
 	</svg>
 		<header class="header">
 			<div class="header-top desktop">
@@ -138,7 +141,9 @@
 											</span>
 										</a>
                     <button class="remove_list-item" title="Удалить из корзины">
-                    	<img src="./assets/remove.svg" alt="">
+                    	<svg class="icon">
+											  <use xlink:href="#remove"></use>
+											</svg>
                     </button>
                   </li>
                   <li class="cart_list-item">
@@ -152,7 +157,9 @@
 											</span>
 										</a>
                     <button class="remove_list-item"title="Удалить из корзины">
-                    	<img src="./assets/remove.svg" alt="">
+                    	<svg class="icon">
+											  <use xlink:href="#remove"></use>
+											</svg>
                     </button>
                   </li>
                   <li class="cart_list-item">
@@ -167,7 +174,9 @@
 											</span>
 										</a>
                     <button class="remove_list-item"title="Удалить из корзины">
-                    	<img src="./assets/remove.svg" alt="">
+                    	<svg class="icon">
+											  <use xlink:href="#remove"></use>
+											</svg>
                     </button>
                   </li>
                   <li class="cart_list-item">
@@ -181,7 +190,9 @@
 											</span>
 										</a>
                     <button class="remove_list-item" title="Удалить из корзины">
-                    	<img src="./assets/remove.svg" alt="">
+                    	<svg class="icon">
+											  <use xlink:href="#remove"></use>
+											</svg>
                     </button>
                   </li>
                   </li>
@@ -193,6 +204,7 @@
                   </div>
                 	<a class="button go_to_cart" href="">Перейти в корзину</a>
                 </div>
+              </div>
 						</li>
 						<li>
 							<a href="">
@@ -298,10 +310,111 @@
 								<a href="">Главная</a>
 							</li>
 							<li class="breadcrumbs-item">
-								<p>Оптовые закупки</p>
+								<p>Корзина</p>
 							</li>
 						</ul>
-						<h1 class="page-name">Оптовые закупки</h1>
+						<h1 class="page-name">Корзина</h1>
+					</div>
+				</div>
+			</div>
+
+			<div class="cart-block">
+				<div class="container cart-block-wrapper">
+					<div class="cart-info">
+						<div class="cart-header">
+							<p class="cart-header-items">В корзине <span>3</span> товара</p>
+							<button class="button secondary">
+								<svg class="icon">
+								  <use xlink:href="#remove"></use>
+								</svg>
+								Очистить корзину
+							</button>
+						</div>
+						<div class="cart-main">
+							<div class="cart-item">
+								<figure class="cart_item-image">
+									<img src="./assets/hookah-1.png">
+								</figure>
+								<div class="cart-item-info">
+									<p class="cart-item-name">Колба «Bamboo Hookah»<br>«UFO» (серебро)</p>
+									<span class="prices one-item">
+										<h5 class="product-price-new">5 990 ₽</h5>
+										<strike class="product-price-old">8 990 ₽</strike>
+									</span>
+									<div class="count-cart">
+	                  <button class="minus-cart"></button>
+	                  <input class="count" type="text" value="1">
+	                  <button class="plus-cart"></button>
+	                </div>
+	                <span class="prices">
+										<h5 class="product-price-new">5 990 ₽</h5>
+										<strike class="product-price-old">8 990 ₽</strike>
+									</span>
+									<button class="remove-list-item"title="Удалить из корзины">
+		              	<svg class="icon">
+										  <use xlink:href="#remove"></use>
+										</svg>
+		              </button>
+								</div>
+							</div>
+							<div class="cart-item">
+								<figure class="cart_item-image">
+									<img src="./assets/hookah-1.png">
+								</figure>
+								<div class="cart-item-info">
+									<p class="cart-item-name">Колба «Bamboo Hookah»<br>«UFO» (серебро)</p>
+									<span class="prices one-item">
+										<h5 class="product-price-current">5 990 ₽</h5>
+									</span>
+									<div class="count-cart">
+	                  <button class="minus-cart"></button>
+	                  <input class="count" type="text" value="1">
+	                  <button class="plus-cart"></button>
+	                </div>
+	                <span class="prices">
+										<h5 class="product-price-current">5 990 ₽</h5>
+									</span>
+									<button class="remove-list-item"title="Удалить из корзины">
+		              	<svg class="icon">
+										  <use xlink:href="#remove"></use>
+										</svg>
+		              </button>
+								</div>
+							</div>
+							<div class="cart-item">
+								<figure class="cart_item-image">
+									<img src="./assets/hookah-1.png">
+								</figure>
+								<div class="cart-item-info">
+									<p class="cart-item-name">Колба «Bamboo Hookah»<br>«UFO» (серебро)</p>
+									<span class="prices one-item">
+										<h5 class="product-price-new">5 990 ₽</h5>
+										<strike class="product-price-old">8 990 ₽</strike>
+									</span>
+									<div class="count-cart">
+	                  <button class="minus-cart"></button>
+	                  <input class="count" type="text" value="1">
+	                  <button class="plus-cart"></button>
+	                </div>
+	                <span class="prices">
+										<h5 class="product-price-new">5 990 ₽</h5>
+										<strike class="product-price-old">8 990 ₽</strike>
+									</span>
+									<button class="remove-list-item"title="Удалить из корзины">
+		              	<svg class="icon">
+										  <use xlink:href="#remove"></use>
+										</svg>
+		              </button>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="cart-checkout">
+						<div class="result">
+							<p>Итого:</p>
+							<h3>27 960 ₽</h3>
+						</div>
+						<a class="button go_to_cart" href="">Оформить заказ</a>
 					</div>
 				</div>
 			</div>
