--- a/catalog.html
+++ b/catalog.html
@@ -30,6 +30,9 @@
 	  <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11 7" id="arrow-down">
 	    <path d="M10.375 1L5.68375 6L1 1" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
 	  </symbol>
+	  <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" id="remove">
+	    <path d="m1.292 1.292 13.467 13.467M14.708 1.292 1.241 14.759" stroke="currentColor" stroke-linecap="square"></path>
+	  </symbol>
 	</svg>
 		<header class="header">
 			<div class="header-top desktop">
@@ -140,8 +143,10 @@
 												<strike class="product-price-old">8 990 ₽</strike>
 											</span>
 										</a>
-                    <button class="remove_list-item">
-                    	<img src="./assets/remove.svg" alt="">
+                    <button class="remove_list-item" title="Удалить из корзины">
+                    	<svg class="icon">
+											  <use xlink:href="#remove"></use>
+											</svg>
                     </button>
                   </li>
                   <li class="cart_list-item">
@@ -154,8 +159,10 @@
 												<h5 class="product-price-current">5 990 ₽</h5>
 											</span>
 										</a>
-                    <button class="remove_list-item">
-                    	<img src="./assets/remove.svg" alt="">
+                    <button class="remove_list-item"title="Удалить из корзины">
+                    	<svg class="icon">
+											  <use xlink:href="#remove"></use>
+											</svg>
                     </button>
                   </li>
                   <li class="cart_list-item">
@@ -169,8 +176,10 @@
 												<strike class="product-price-old">8 990 ₽</strike>
 											</span>
 										</a>
-                    <button class="remove_list-item">
-                    	<img src="./assets/remove.svg" alt="">
+                    <button class="remove_list-item"title="Удалить из корзины">
+                    	<svg class="icon">
+											  <use xlink:href="#remove"></use>
+											</svg>
                     </button>
                   </li>
                   <li class="cart_list-item">
@@ -183,8 +192,10 @@
 												<h5 class="product-price-current">5 990 ₽</h5>
 											</span>
 										</a>
-                    <button class="remove_list-item">
-                    	<img src="./assets/remove.svg" alt="">
+                    <button class="remove_list-item" title="Удалить из корзины">
+                    	<svg class="icon">
+											  <use xlink:href="#remove"></use>
+											</svg>
                     </button>
                   </li>
                   </li>
@@ -196,6 +207,7 @@
                   </div>
                 	<a class="button go_to_cart" href="">Перейти в корзину</a>
                 </div>
+              </div>
 						</li>
 						<li>
 							<a href="">
