--- a/wholesale.html
+++ b/wholesale.html
@@ -27,6 +27,9 @@
 	  <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11 7" id="arrow-down">
 	    <path id="Stroke 1" d="M10.375 1L5.68375 6L1 1" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
 	  </symbol>
+	  <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" id="remove">
+	    <path d="m1.292 1.292 13.467 13.467M14.708 1.292 1.241 14.759" stroke="currentColor" stroke-linecap="square"></path>
+	  </symbol>
 	</svg>
 		<header class="header">
 			<div class="header-top desktop">
@@ -138,7 +141,9 @@
 											</span>
 										</a>
                     <button class="remove_list-item" title="Удалить из корзины">
-                    	<img src="./assets/remove.svg" alt="">
+                    	<svg class="icon">
+											  <use xlink:href="#remove"></use>
+											</svg>
                     </button>
                   </li>
                   <li class="cart_list-item">
@@ -152,7 +157,9 @@
 											</span>
 										</a>
                     <button class="remove_list-item"title="Удалить из корзины">
-                    	<img src="./assets/remove.svg" alt="">
+                    	<svg class="icon">
+											  <use xlink:href="#remove"></use>
+											</svg>
                     </button>
                   </li>
                   <li class="cart_list-item">
@@ -167,7 +174,9 @@
 											</span>
 										</a>
                     <button class="remove_list-item"title="Удалить из корзины">
-                    	<img src="./assets/remove.svg" alt="">
+                    	<svg class="icon">
+											  <use xlink:href="#remove"></use>
+											</svg>
                     </button>
                   </li>
                   <li class="cart_list-item">
@@ -181,7 +190,9 @@
 											</span>
 										</a>
                     <button class="remove_list-item" title="Удалить из корзины">
-                    	<img src="./assets/remove.svg" alt="">
+                    	<svg class="icon">
+											  <use xlink:href="#remove"></use>
+											</svg>
                     </button>
                   </li>
                   </li>
@@ -193,6 +204,7 @@
                   </div>
                 	<a class="button go_to_cart" href="">Перейти в корзину</a>
                 </div>
+              </div>
 						</li>
 						<li>
 							<a href="">
